--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -30,13 +30,15 @@
 
 html, body {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
 }
 
 body {
     background-color: #f1f4f5;
+    display: flex;
+    flex-direction: column;
 }
 
 .ul-no-bullets { list-style-type: none; }
@@ -170,6 +172,7 @@ input:focus {
 .underline-hover:hover { 
     text-decoration: underline; 
 }
+
 /* Break up long text */
 .word-break { word-break: break-all; }
 
@@ -474,7 +477,7 @@ button[disabled],
 
 .content-card-v2 {
     background-color: #fff;
-    margin: 10px auto;
+    margin: 8px auto;
     max-width: 1280px;
     min-width: 1280px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
@@ -534,7 +537,7 @@ button[disabled],
 
 /* SUBNAV */
 .comm-nav {
-    margin: 16px auto;
+    margin: 6px auto;
     max-width: 1280px;
     min-width: 1280px;
     max-height: 60px;
@@ -569,18 +572,6 @@ button[disabled],
 .active-nav {
     background-color: #007385;
     color: #fff;
-}
-
-
-/* COMMUNITY DASHBOARD: SETTINGS */
-.set-nav {
-    max-height: 80px;
-    min-height: 80px;
-}
-
-.border-left{
-    border-left: 1px solid #000;
-    padding-left: 2%;
 }
 
 /* COMMUNITY DASHBOARD: Activity */
@@ -972,6 +963,17 @@ button[disabled],
 .actions-card .tooltip .tooltiptext::after, .actions-card-notifified .tooltip .tooltiptext::after { left: 78%; }
 
 /* View Project / Project Actions */
+
+.back-to-projects {
+    margin: auto;
+    width: 1271px;
+}
+
+.back-to-projects a:hover {
+    text-decoration: none;
+    border-bottom: 1px solid #007585;
+}
+
 .project-card, .actions-card, .actions-card-notifified {
     background-color: #fff;
     margin: 10px auto;
